--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="title_activity_notas">Notas</string>
     <string name="title_activity_listado_pedido">Listado de Pedido</string>
     <string name="title_activity_pedido">Pedido</string>
+    <string name="boton2001">tomar foto</string>
 
 </resources>
