Librería de voz 2.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,6 @@
     <string name="botonPlay">Play</string>
     <string name="botonStop">Stop</string>
     <string name="indicaciones">Indicaciones de voz</string>
-    <string name="btnTalk">Pedir por voz</string>
+    <string name="btnTalk">Verificar existencia por voz</string>
 
 </resources>
