--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_categorias">Categorias</string>
     <string name="title_activity_platos">Platos</string>
-    <string name="title_activity_bebidas">Bebidas</string>
-    <string name="title_activity_porciones">Porciones</string>
-    <string name="title_activity_parrillada">Parrillada</string>
-    <string name="title_activity_mariscos">Mariscos</string>
+    <string name="title_activity_bebidas">Suplementos</string>
+    <string name="title_activity_porciones">Analgesicos</string>
+    <string name="title_activity_parrillada">Varios</string>
+    <string name="title_activity_mariscos">Antibioticos</string>
     <string name="title_activity_control_menu">Control Menu</string>
     <string name="title_activity_administrador">Administrador</string>
     <string name="title_activity_control_platos">Control de Platos</string>
